# rubik

./: .gitignore  Cargo.toml  README.md  SPEC.md  SPEC_draft.md
benchmark/: backends_12.csv  init_scramble_solve_cycle.rs  large_cube_memory_and_move_time.rs  scramble_probability_sweep.csv  scramble_probability_sweep.txt  scramble_stats.csv  scramble_stats_n20.csv  stage_solve_time.rs  stages_13.csv
scripts/: generate-structure.sh
src/: cube.rs  face.rs  facelet.rs  geometry.rs  lib.rs  line.rs  main.rs  matrix.rs  moves.rs  solver.rs
src/algorithm/: mod.rs
src/algorithms/: mod.rs  operation.rs  three_by_three.rs  traits.rs
src/algorithms/centers/: mod.rs  (+3 more)
src/layout/: matrix.rs  mod.rs  strip.rs
src/model/: face.rs  mod.rs
src/moves/: history.rs  mod.rs
src/puzzle/: conventions.rs  mod.rs
src/runtime/: mod.rs
src/simulation/: mod.rs
src/solver/: center_schedule.rs  centers.rs  context.rs  corners.rs  edges.rs  error.rs  execution_mode.rs  generated_center_schedule.rs  mod.rs  options.rs  phase.rs  pipeline.rs  progress.rs  report.rs
src/storage/: base6.rs  byte.rs  byte3.rs  facelet_array.rs  init.rs  mod.rs  nibble.rs  packed3.rs  three_bit.rs  traits.rs
src/support/: centers.rs  edges.rs  mod.rs
src/util/: mod.rs  random.rs  threading.rs
structure/: index.html  modules-traits-tree.txt  modules-traits-types-functions.dot  modules-traits-types.dot  modules-traits.dot  source-line-counts.txt  source-tree.txt  targets.tsv  targets.txt
tests/: characterization_operations.rs  characterization_pipeline.rs  stage_behavior.rs  stage_contracts.rs
(+44 files in other folders)
