[package]
name = "rubik"
version = "0.1.0"
edition = "2021"
default-run = "rubik"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.11"

[[bench]]
name = "large_cube_memory_and_move_time"
path = "benchmark/large_cube_memory_and_move_time.rs"
harness = false

[[bench]]
name = "stage_solve_time"
path = "benchmark/stage_solve_time.rs"
harness = false
