[package]
name = "rubik"
version = "0.1.0"
edition = "2021"
default-run = "rubik"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.11"

[[bin]]
name = "rubik"
path = "src/main.rs"

[[bin]]
name = "run_pipeline_no_render"
path = "src/bin/run_pipeline_no_render.rs"

[[bin]]
name = "stages_benchmark"
path = "src/bin/stages_benchmark.rs"

[[bin]]
name = "backends_benchmark"
path = "src/bin/backends_benchmark.rs"

[[bin]]
name = "generate_center_schedule"
path = "src/bin/generate_center_schedule.rs"

[[bin]]
name = "scramble_benchmark"
path = "src/bin/scramble_benchmark.rs"
